syntax = "proto2";
package UAVproto;

option cc_generic_services = true;

// message definition
message SignRequest {
    required bytes M = 1;
    required int32 t = 2;
}

message SignResponse {
    required bytes cj = 1;
    required bytes sig = 2;
    required bytes ID = 3;
}

// service definition
service SignService {
  rpc sign(SignRequest) returns (SignResponse);
}